# douka_plugin_phase_field

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
cmake/: clang_format.cmake  cppcheck.cmake  dependencies.cmake
param/: phase_field.json
scripts/: clean.sh  init.sh  obsgen.sh  paramgen.py  plot.py  run.sh
src/: common.hh  phase_field.cc  phase_field.hh
